--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                                         <img class="iconwidth" src="assets/fashion-design.png" alt="a white t-shirt with no print"  />
                                         <h3 class="font-alt featurestext">Unique & Custom Prints</h3>
                                         <p class="fw-bold mb-0 textresponsive">
-                                            Get high-quality, trend-driven, unique, and custom print designs generated for you based on your personal factors and design preferences.                                        
+                                            Get high-quality, trend-driven, unique, and custom print designs created for you based on your personal factors and design preferences.
                                         </p>
                                     </div>
                                 </div>
@@ -273,7 +273,7 @@
                                         <h3 class="font-alt featurestext">Enhanced UX
                                         </h3>
                                         <p class="fw-bold mb-0 textresponsive">
-                                            A consumer platform that offers a unified user experience by utilizing a UI that simplifies the collection of design parameters and an interactive 3D model viewer of the garment that allows the consumer to see what they're purchasing.                                        </p>
+                                            A consumer platform that offers a unified user experience by utilizing a UI that simplifies the collection of design parameters and an interactive 3D model viewer of the silhouette that allows the consumer to see what they're purchasing.                                        </p>
                                     </div>
                                 </div>
                                 <div class="col-md-4 mb-5 mb-md-0">
@@ -400,8 +400,7 @@
                     <div class="col-12 col-lg-7">
                         <h3 class="display-8 lh-1 ">2. Choose Preferences</h3>
                         <p class="fw-bold text-muted mb-5 mb-lg-0 textresponsive">
-                            Following garment selection, the platform will direct the customer to a page where they can select the size (for physical garments) and the custom design preferences, such as trend and color, for the design to be based on.<br>
-                        </p>
+                            Following garment selection, the platform will direct the customer to a page where they can select the size (for physical garments) and the custom design preferences, such as trend, sub trend, colors, season, and factors like age and gender for the design to be based on.                        </p>
                     </div>
                     <div class="col-sm-10 col-md-8 col-lg-5">
                         <div class="px-sm-0"><img class="img-fluid" src="assets/productnoprint.png" alt="a  picture of a white shirt, next to it is the user interface" /></div>
