--- a/index.html
+++ b/index.html
@@ -225,27 +225,20 @@
         </header>
 
             <!-- Quote/testimonial aside-->
-            <!-- <aside class="text-center bg-gradient-primary-to-secondary">
+            <aside class="text-center bg-gradient-primary-to-secondary">
             <div class="container px-5">
                 <div class="row gx-5 justify-content-center">
-                    <div class="col-xl-12">
+                    <div class="col-xl-7">
                         <div class="textblack mb-4">
                             <h2 class="display-6 lh-1 mb-4">Mission & Vision</h2>
                             <p class="fw-bold textresponsive">
-                                XARIIA's vision is to streamline custom fashion,  is achieved by :
-                                <ul class="textcenter textresponsive fw-bold">
-                                    - Simplifying the custom print design process.<br>
-                                    - Reducing costs by shortening the time needed for a design.<br>
-                                    - Enhancing UX by instantly creating designs and allowing customers to view them before purchasing.<br>
-                                    - Providing each customer with a unique and custom design.<br>
-                                    - Reducing waste through on-demand production and promoting digital fashion that is 96% more sustainable.<br>
-                                </ul>
+                               XARIIA's vision is to simplify custom fashion, make it accessible and affordable to everyone world-wide, deliver custom designs to each consumer while keeping the process simple and user-friendly, reduce waste through on-demand production, and promote 96% more sustainable digital fashion.
                             </p>    
                         </div>
                     </div>
                 </div>
             </div>
-        </aside> -->
+        </aside>
 
         <!-- App features section-->
         <section class="sectionfeatures">
@@ -256,7 +249,7 @@
                     <div class="col-lg-12 order-lg-1 mb-5 mb-lg-0">
                         <div class="container-fluid px-5">
                             <div class="row gx-5">
-                                <div class="col-md-4 mb-5 mb-md-0">
+                                <div class="col-md-6 mb-5 mb-md-0">
                                     <!-- Feature item-->
                                     <div class="text-center">
                                         <img class="iconwidth" src="assets/fashion-design.png" alt="a white t-shirt with no print"  />
@@ -266,7 +259,7 @@
                                         </p>
                                     </div>
                                 </div>
-                                <div class="col-md-4 mb-5 mb-md-0">
+                                <div class="col-md-6 mb-5 mb-md-0">
                                     <!-- Feature item-->
                                     <div class="text-center">
                                         <img class="iconwidth" src="assets/user-interface.png" alt="a white t-shirt with no print"  />
@@ -276,7 +269,11 @@
                                             A consumer platform that offers a unified user experience by utilizing a UI that simplifies the collection of design parameters and an interactive 3D model viewer of the silhouette that allows the consumer to see what they're purchasing.                                        </p>
                                     </div>
                                 </div>
-                                <div class="col-md-4 mb-5 mb-md-0">
+                            </div>
+                            <div class="row gx-5">
+                                <div class="col-md-3 mb-5 mb-md-0">                                
+                                </div>
+                                <div class="col-md-6 mb-5 mb-md-0">
                                     <!-- Feature item-->
                                     <div class="text-center">
                                         <img class="iconwidth" src="assets/ai.png" alt="a white t-shirt with no print"  />
