--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -51,7 +51,8 @@
       
         <!-- Google Fonts -->
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-      
+        <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">       
+        <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
         <!-- Vendor CSS Files -->
         <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
         <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
@@ -108,7 +109,7 @@
     <body id="page-top">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow-sm" id="mainNav">
-            <div class="fixed-top hwrap">
+            <!-- <div class="fixed-top hwrap">
                 <div class="hmove">
                 <div class="hitem"><a href="https://xariia.net/" target="_blank">Try Out Our Alpha Release</a>
                 </div>
@@ -117,10 +118,9 @@
                 </div>
                 <div class="hitem"><a href="https://XARIIA.us1.list-manage.com/subscribe/post?u=515fdf03c460cd13fff01535c&id=233939e4f6" target="_blank">Join Our Email List</a></div> 
                 </div>
-
-            </div>
+            </div> -->
             <div class="container px-5 logomid">
-                <a href="index.html" class="navbar-brand fw-bold"><img src="assets/logo.png" alt="XARIIA logo" class="img-fluid"></a>
+                <a href="index.html" class="navbar-brand fw-bold"><img src="assets/XARIIALogojusttext.png" alt="XARIIA logo" class="img-fluid"></a>
                 <!-- <button class="btn btn-primary rounded-pill px-3 mb-2 mb-lg-0" data-bs-toggle="modal" data-bs-target="#feedbackModal">
                     <span class="d-flex align-items-center">
                         <span class="small">Subscribe</span>
