--- a/index.html
+++ b/index.html
@@ -380,9 +380,9 @@
                 <h2 class="display-6 lh-1 mb-4">How Does It Work ?</h2>
                 <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
                     <div class="col-12 col-lg-7">
-                        <h3 class="display-8 lh-1"> 1. Choose A Garment</h3>
+                        <h3 class="display-8 lh-1"> 1. Choose A silhouette</h3>
                         <p class="fw-bold text-muted mb-5 mb-lg-0 textresponsive">
-                            Our platform will provide a wide variety of physical, digital, and phygital garments for the custom design to go on.
+                            Our platform will provide a wide variety of physical, digital, and phygital silhouettes for the custom design to go on.
                         </p>                   
                      </div>
                     <div class="col-xs-10 col-md-6 col-lg-5">
@@ -449,9 +449,8 @@
                             <span class="Textblue">Consumers</span>: by generating and applying custom prints to the (physical, digital, and phygital) garments sold on our online platform.
                         </p>    
                     </div>
-                    <div class="col-sm-10 col-md-8 col-lg-4">
-                        <div class="px-sm-0"><img class=" img-fluid ModelCss" src="assets/Model.png" alt="a t-shirt with a hawaian print" /></div>
-                    </div>
+                    <div class="col-sm-10 col-md-8 col-lg-4 imgcenter">
+                        <div class="px-sm-0"><img class="img-fluid ModelCss" src="assets/Model.png" alt="a t-shirt with a hawaian print" /></div>
                 </div>
         </section>
 
