--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                                     <div class="text-center">
                                         <img class="iconwidth" src="assets/ai.png" alt="a white t-shirt with no print"  />
                                         <h3 class="font-alt featurestext">
-                                            Instant Prints & Reduced Costs
+                                            Instant Prints At Reduced Costs
                                         </h3>
                                         <p class="fw-bold mb-0 textresponsive">
                                             Our generative AI creates designs in seconds rather than hours, reducing costs and granting the user full ownership of the asset, making it ideal for designers, businesses, and consumers.                                        </p>
@@ -287,6 +287,8 @@
                             </div>
                                
                          </div>
+
+                    
 
                     <!-- <div class="col-lg-4 order-lg-0">
                         <div class="features-device-mockup">
@@ -315,6 +317,20 @@
                 </div>
             </div>
         </section>
+
+        <aside class="text-center bg-gradient-primary-to-secondary">
+            <div class="container px-5">
+                <div class="row gx-5 justify-content-center">
+                    <div class="col-xl-7">
+                        <div class="textblack mb-4">
+                            <h2 class="display-6 lh-1 mb-4">
+                                Be Yourself... But For Real                                            
+                            </h2>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </aside>
 
         <!-- <section>
             <div class="container px-5">
