--- a/index.html
+++ b/index.html
@@ -232,8 +232,7 @@
                         <div class="textblack mb-4">
                             <h2 class="display-6 lh-1 mb-4">Mission & Vision</h2>
                             <p class="fw-bold textresponsive">
-                               XARIIA's vision is to simplify custom fashion, make it accessible and affordable to everyone world-wide, deliver custom designs to each consumer while keeping the process simple and user-friendly, reduce waste through on-demand production, and promote 96% more sustainable digital fashion.
-                            </p>    
+                                XARIIA's vision is to simplify custom fashion, make it accessible and affordable to everyone world-wide, provide each customer with a unique and custom product while keeping the process simple and user-friendly, reduce waste through on-demand production, and promote 96% more sustainable digital fashion.                            </p>    
                         </div>
                     </div>
                 </div>
