--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                     <div class="col-lg-6">
                         <!-- Mashead text and app badges-->
                         <div class="mb-5 mb-lg-0 text-center text-lg-start">
-                            <h1 class="display-6 lh-2 mb-3">Custom Fashion Simplified</h1>
+                            <h1 class="display-6 lh-2 mb-3">Get Unique & Custom Designs Generated In Seconds                            </h1>
                             <p class=" fw-bold mb-5 textresponsive">XARIIA simplifies custom fashion by automating the custom print design process for clothing (lowering costs and enhancing UX), generating high-quality, style-consistent, trend-driven, unique, and custom print designs for the fashion industry.
                             </p>
                             
