--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                         <!-- Mashead text and app badges-->
                         <div class="mb-5 mb-lg-0 text-center text-lg-start">
                             <h1 class="display-6 lh-2 mb-3">Get Unique & Custom Designs Generated In Seconds                            </h1>
-                            <p class=" fw-bold mb-5 textresponsive">XARIIA simplifies custom fashion by automating the custom print design process for clothing (lowering costs and enhancing UX), generating high-quality, style-consistent, trend-driven, unique, and custom print designs for the fashion industry.
+                            <p class=" fw-bold mb-5 textresponsive">XARIIA revolutionizes the fashion industry by automating the custom print design process for clothing, generating high-quality, style-consistent, trend-driven, unique, and custom print designs.
                             </p>
                             
                             <!-- <p class="lead fw-bold text-muted mb-5">             
@@ -459,7 +459,7 @@
                     <div class="col-12 col-lg-7">
                         <h2 class="display-6 lh-1 mb-4">For Who ?</h2>
                         <p class="fw-bold text-muted mb-5 mb-lg-0 textresponsive">
-                            <span class="Textblue">Fashion Designers & Houses</span>: by providing monthly print-generation packages that allow customers to generate and download custom prints for their own use throw a panel on our platform.<br><br>
+                            <span class="Textblue">Creators</span>: by providing monthly print-generation packages that allow customers to generate and download custom prints for their own use through a panel on our platform.<br><br>
                             <span class="Textblue">Businesses</span>: by integrating our AI (as an API) into the online platforms of other businesses and generating custom prints for their products.<br><br>
                             <span class="Textblue">Consumers</span>: by generating and applying custom prints to the (physical, digital, and phygital) garments sold on our online platform.
                         </p>    
