--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
         <!-- App features section-->
         <section class="sectionfeatures">
             <div class="container px-5">
-                <h2 class="display-6 lh-1 mb-4 textcenter">Custom Designs In Seconds
+                <h2 class="display-6 lh-1 mb-4 textcenter">
                 </h2>
                 <div class="row gx-5 align-items-center">
                     <div class="col-lg-12 order-lg-1 mb-5 mb-lg-0">
@@ -317,7 +317,7 @@
             </div>
         </section>
 
-        <aside class="text-center bg-gradient-primary-to-secondary">
+        <!-- <aside class="text-center bg-gradient-primary-to-secondary">
             <div class="container px-5">
                 <div class="row gx-5 justify-content-center">
                     <div class="col-xl-7">
@@ -329,7 +329,7 @@
                     </div>
                 </div>
             </div>
-        </aside>
+        </aside> -->
 
         <!-- <section>
             <div class="container px-5">
