--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="XARIIA" />
     <meta property="og:url" content="https://xariia.com/" />
-    <meta property="og:description" content="XARIIA is the world's first immersive-commerce platform with an AI-powered print designer for the clothing sold on the website">
+    <meta property="og:description" content="Get Unique & Custom Designs Generated in Seconds for the Fashion Industry">
     <meta name="keywords" content="pattern me, XARIIA, fashion design, womens clothes, fashion designer, pattern designer, custom clothing, unique, mens clothing, fashion dresses, fashion style, men fashion, new fashion, fashion trends, women fashion, decorated fashion, printed fashion, custom fashion, custom clothing">
     <meta property="og:image" content="assets/apple-touch-icon-114x114.png"><meta property="og:image:type" content="image/png" />
     <meta property="og:image:alt" content="XARIIA Logo" />
