--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="XARIIA" />
     <meta property="og:url" content="https://xariia.com/" />
-    <meta property="og:description" content="Get Unique & Custom Designs Generated in Seconds for the Fashion Industry">
+    <meta property="og:description" content="Get Unique & Custom Print Designs Generated in Seconds for the Fashion Industry">
     <meta name="keywords" content="pattern me, XARIIA, fashion design, womens clothes, fashion designer, pattern designer, custom clothing, unique, mens clothing, fashion dresses, fashion style, men fashion, new fashion, fashion trends, women fashion, decorated fashion, printed fashion, custom fashion, custom clothing">
     <meta property="og:image" content="assets/apple-touch-icon-114x114.png"><meta property="og:image:type" content="image/png" />
     <meta property="og:image:alt" content="XARIIA Logo" />
@@ -136,8 +136,9 @@
                     <div class="col-lg-6">
                         <!-- Mashead text and app badges-->
                         <div class="mb-5 mb-lg-0 text-center text-lg-start">
-                            <h1 class="display-6 lh-2 mb-3">Get Unique & Custom Designs Generated In Seconds                            </h1>
-                            <p class=" fw-bold mb-5 textresponsive">XARIIA revolutionizes the fashion industry by automating the custom print design process for clothing, generating high-quality, style-consistent, trend-driven, unique, and custom print designs.
+                            <h1 class="display-6 lh-2 mb-3">Custom Fashion  Made Simple, Fast, And Creative
+                            </h1>
+                            <p class=" fw-bold mb-5 textresponsive">XARIIA revolutionizes the fashion industry by automating the custom print design process for clothing, generating high-quality, style-consistent, trend-driven, unique, and custom print designs in seconds.
                             </p>
                             
                             <!-- <p class="lead fw-bold text-muted mb-5">             
