--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
                         </p>                   
                      </div>
                     <div class="col-xs-10 col-md-6 col-lg-5">
-                        <div class="px-sm-0"><img class="img-fluid" src="assets/productselector.png" alt="a white t-shirt with no print"/></div>
+                        <div class="px-sm-0"><img class="img-fluid" src="assets/productimg1.png" alt="a white t-shirt with no print"/></div>
                     </div>
                 </div>
             </div>
@@ -416,7 +416,7 @@
                             Following garment selection, the platform will direct the customer to a page where they can select the size (for physical garments) and the custom design preferences, such as trend, sub trend, colors, season, and factors like age and gender for the design to be based on.                        </p>
                     </div>
                     <div class="col-sm-10 col-md-8 col-lg-5">
-                        <div class="px-sm-0"><img class="img-fluid" src="assets/productnoprint.png" alt="a  picture of a white shirt, next to it is the user interface" /></div>
+                        <div class="px-sm-0"><img class="img-fluid" src="assets/productimg2.png" alt="a  picture of a white shirt, next to it is the user interface" /></div>
                     </div>
                 </div>
             </div>
@@ -431,7 +431,7 @@
                         </p>                    
                     </div>
                     <div class="col-sm-10 col-md-8 col-lg-5">
-                        <div class="px-sm-0"><img class=" img-fluid" src="assets/productprint.png" alt="a  picture of a shirt with a hawaian print next to it is the user interface" /></div>
+                        <div class="px-sm-0"><img class=" img-fluid" src="assets/productimg3.png" alt="a  picture of a shirt with a hawaian print next to it is the user interface" /></div>
                     </div>
                 </div>
             </div>
@@ -448,7 +448,7 @@
                         </p>    
                     </div>
                     <div class="col-sm-10 col-md-8 col-lg-5">
-                        <div class="px-sm-0"><img class="img-fluid" src="assets/usecase.png" alt="a t-shirt with a hawaian print" /></div>
+                        <div class="px-sm-0"><img class="img-fluid" src="assets/productimg4.png" alt="a t-shirt with a hawaian print" /></div>
                     </div>
                 </div>
 
