--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                                               </div>
                                           </form>
                                         </div>
-                                        <p class="fw-bold">Subscribe now to be kept up to date on our upcoming launch.</p>
+                                        <p class="fw-bold Subfont">Subscribe now to be kept up to date on our upcoming launch.</p>
                                     <!--End mc_embed_signup-->
                                 </div>
                             </div>
@@ -243,8 +243,8 @@
         <!-- App features section-->
         <section class="sectionfeatures">
             <div class="container px-5">
-                <h2 class="display-6 lh-1 mb-4 textcenter">
-                </h2>
+                <h2 class="display-6 lh-1 mb-4 Textfeatures">Features</h2>
+
                 <div class="row gx-5 align-items-center">
                     <div class="col-lg-12 order-lg-1 mb-5 mb-lg-0">
                         <div class="container-fluid px-5">
@@ -254,7 +254,7 @@
                                     <div class="text-center">
                                         <img class="iconwidth" src="assets/fashion-design.png" alt="a white t-shirt with no print"  />
                                         <h3 class="font-alt featurestext">Unique & Custom Prints</h3>
-                                        <p class="fw-bold mb-0 textresponsive">
+                                        <p class="fw-bold mb-0 textresponsive2">
                                             Get high-quality, trend-driven, unique, and custom print designs created for you based on your personal factors and design preferences.
                                         </p>
                                     </div>
@@ -265,7 +265,7 @@
                                         <img class="iconwidth" src="assets/user-interface.png" alt="a white t-shirt with no print"  />
                                         <h3 class="font-alt featurestext">Enhanced UX
                                         </h3>
-                                        <p class="fw-bold mb-0 textresponsive">
+                                        <p class="fw-bold mb-0 textresponsive2">
                                             A consumer platform that offers a unified user experience by utilizing a UI that simplifies the collection of design parameters and an interactive 3D model viewer of the silhouette that allows the consumer to see what they're purchasing.                                        </p>
                                     </div>
                                 </div>
@@ -280,7 +280,7 @@
                                         <h3 class="font-alt featurestext">
                                             Instant Prints At Reduced Costs
                                         </h3>
-                                        <p class="fw-bold mb-0 textresponsive">
+                                        <p class="fw-bold mb-0 textresponsive2">
                                             Our generative AI creates designs in seconds rather than hours, reducing costs and granting the user full ownership of the asset, making it ideal for designers, businesses, and consumers.                                        </p>
                                     </div>
                                 </div>
@@ -452,7 +452,6 @@
                     </div>
                 </div>
 
-                <!-- <div class="mb-6 mb-lg-12 text-center text-lg-start"><a href="https://xariia.net/" target="_blank"><h4 class="font-alt margintop1rem">Try Out Our Alpha Release</h4></a></div> -->
         </section>
         <section class="bg-light">
             <div class="container px-5">
@@ -468,6 +467,9 @@
                     <div class="col-sm-10 col-md-8 col-lg-4 imgcenter">
                         <div class="px-sm-0"><img class="img-fluid ModelCss" src="assets/Model.png" alt="a t-shirt with a hawaian print" /></div>
                 </div>
+
+                <div class="mb-6 mb-lg-12 text-lg-start Tryusoud"><a href="https://xariia.net/" target="_blank"><h3 class="font-alt margintop1rem">Try Out Our Alpha Release</h3></a></div>
+
         </section>
 
 
@@ -516,7 +518,7 @@
                                               </div>
                                           </form>
                                         </div>
-                                        <p class="fw-bold">Subscribe now to be kept up to date on our upcoming launch.</p>
+                                        <p class="fw-bold Subfont">Subscribe now to be kept up to date on our upcoming launch.</p>
                                     <!--End mc_embed_signup-->
                                 </div>
                             </div>
