--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
 
     <title>XARIIA</title>
     <meta charset="UTF-8">
-    <meta name="description" content="XARIIA is the world's first immersive-commerce platform with an AI-powered print designer for the clothing sold on the website">
+    <meta name="description" content="XARIIA automates the time-consuming pattern print design process for the fashion industry with image-generating AI that creates it in seconds, resulting in designs that are 80% cheaper and have a 90x faster turnaround time, resulting in a superior UX."
+    >
     <meta name="keywords" content="pattern me, XARIIA, fashion designing, womens clothes, fashion designer, pattern designer, custom clothing, unique, mens clothing, fashion dresses, fashion style, men fashion, new fashion, fashion trends, women fashion, decorated fashion, printed fashion, custom fashion, custom clothing">
     <meta name="author" content="Shirak Kevorkian">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="XARIIA" />
     <meta property="og:url" content="https://xariia.com/" />
-    <meta property="og:description" content="Get Unique & Custom Print Designs Generated in Seconds for the Fashion Industry">
+    <meta property="og:description" content="XARIIA automates the time-consuming pattern print design process for the fashion industry with image-generating AI that creates it in seconds, resulting in designs that are 80% cheaper and have a 90x faster turnaround time, resulting in a superior UX.
+    ">
     <meta name="keywords" content="pattern me, XARIIA, fashion design, womens clothes, fashion designer, pattern designer, custom clothing, unique, mens clothing, fashion dresses, fashion style, men fashion, new fashion, fashion trends, women fashion, decorated fashion, printed fashion, custom fashion, custom clothing">
     <meta property="og:image" content="assets/apple-touch-icon-114x114.png"><meta property="og:image:type" content="image/png" />
     <meta property="og:image:alt" content="XARIIA Logo" />
