--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                                               </div>
                                           </form>
                                         </div>
-                                        <p class="fw-light  Subfont">Subscribe now to be kept up to date on our upcoming launch.</p>
+                                        <p class="fw-light fw-light Subfont">Subscribe now to be kept up to date on our upcoming launch.</p>
                                     <!--End mc_embed_signup-->
                                 </div>
                             </div>
@@ -474,7 +474,7 @@
                         <div class="px-sm-0"><img class="img-fluid ModelCss" src="assets/Model.png" alt="a t-shirt with a hawaian print" /></div>
                 </div>
 
-                <div class="mb-6 mb-lg-12 text-lg-start Tryusoud fw-light "><a href="https://xariia.net/" target="_blank"><h3 class="font-alt margintop1rem">Try Out Our Alpha Release</h3></a></div>
+                <div class="display-6 lh-1 fw-light Tryusout"><a href="https://xariia.net/" target="_blank"><h3 class="font-alt margintop1rem">Try Out Our Alpha Release</h3></a></div>
 
         </section>
 
@@ -524,7 +524,7 @@
                                               </div>
                                           </form>
                                         </div>
-                                        <p class="fw-light  Subfont">Subscribe now to be kept up to date on our upcoming launch.</p>
+                                        <p class="fw-light fw-light Subfont">Subscribe now to be kept up to date on our upcoming launch.</p>
                                     <!--End mc_embed_signup-->
                                 </div>
                             </div>
