--- a/index.html
+++ b/index.html
@@ -193,7 +193,36 @@
                           </div>
 
 
+                          <div class="mySlides fade">
+                            <div class="numbertext"></div>
+                            <img class="img-fluid sliderimg" src="assets/product5.png">
+                            <div class="text"></div>
+                          </div>
+
+                          <div class="mySlides fade">
+                            <div class="numbertext"></div>
+                            <img class="img-fluid sliderimg" src="assets/product6.png">
+                            <div class="text"></div>
+                          </div>
+
+                          <div class="mySlides fade">
+                            <div class="numbertext"></div>
+                            <img class="img-fluid sliderimg" src="assets/product7.png">
+                            <div class="text"></div>
+                          </div>
+
+                          <div class="mySlides fade">
+                            <div class="numbertext"></div>
+                            <img class="img-fluid sliderimg" src="assets/product8.png">
+                            <div class="text"></div>
+                          </div>
+
+
                           <div style="text-align:center">
+                            <span class="dot"></span> 
+                            <span class="dot"></span> 
+                            <span class="dot"></span> 
+                            <span class="dot"></span> 
                             <span class="dot"></span> 
                             <span class="dot"></span> 
                             <span class="dot"></span> 
@@ -562,7 +591,7 @@
         <footer class="fw-light  bg-black text-center py-5">
             <div class="container px-5">
                 <div class=" text-white-50 small">
-                    <div class="mb-2">&copy;2023 XARIIA Inc</div>
+                    <div class="">&copy;2023 XARIIA Inc</div>
                     <a href="privacy-policy.html">Privacy Policy</a>
                     <!-- <span class="mx-1">&middot;</span>
                     <a href="#!">Terms</a> -->
