--- a/index.html
+++ b/index.html
@@ -192,13 +192,18 @@
                             <div class="text"></div>
                           </div>
 
+                          <div class="mySlides fade">
+                            <div class="numbertext"></div>
+                            <img class="img-fluid sliderimg" src="assets/product4.png">
+                            <div class="text"></div>
+                          </div>
 
                           <div class="mySlides fade">
                             <div class="numbertext"></div>
                             <img class="img-fluid sliderimg" src="assets/product5.png">
                             <div class="text"></div>
                           </div>
-
+ 
                           <div class="mySlides fade">
                             <div class="numbertext"></div>
                             <img class="img-fluid sliderimg" src="assets/product6.png">
@@ -219,6 +224,7 @@
 
 
                           <div style="text-align:center">
+                            <span class="dot"></span> 
                             <span class="dot"></span> 
                             <span class="dot"></span> 
                             <span class="dot"></span> 
