--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
         <!-- Basic features section-->
          <section class="bg-light">
             <div class="container px-5">
-                <h2 class="display-6 lh-1 mb-4">How ?</h2>
+                <h2 class="display-6 lh-1 mb-4 fw-light">How ?</h2>
                 <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
                     <div class="col-12 col-lg-6">
                         <h3 class="display-8 lh-1 fw-light "> 1. Select A Silhouette</h3>
