--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
             <div class="container px-5">
                 <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
                     <div class="col-12 col-lg-6">
-                        <h2 class="display-6 lh-1 mb-4 fw-light ">For Who ?</h2>
+                        <h2 class="display-6 lh-1 mb-4 fw-light">For Who ?</h2>
                         <p class="fw-light  text-muted mb-5 mb-lg-0 textresponsive">
                             <span class="Textblue">Designers</span>: by providing monthly print-generation packages that allow customers to generate and download custom prints for their own use through a panel on our platform.<br><br>
                             <span class="Textblue">Businesses</span>: by integrating our AI (as an API) into the online platforms of other businesses and generating custom prints for their products.<br><br>
@@ -509,7 +509,7 @@
                         <div class="px-sm-0"><img class="img-fluid ModelCss" src="assets/Model.png" alt="a t-shirt with a hawaian print" /></div>
                 </div>
 
-                <div class="display-6 lh-1 fw-light Tryusout"><a href="https://xariia.net/" target="_blank"><h3 class="font-alt margintop1rem">Try Out Our Alpha Release</h3></a></div>
+                <div class="display-6 lh-1 mb-4 fw-light Tryusout"><a href="https://xariia.net/" target="_blank"><h2 class="font-alt margintop1rem">Try Out Our Alpha Release</h2></a></div>
 
         </section>
 
