--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
                     <div class="col-12 col-lg-6">
                         <h3 class="display-8 lh-1 fw-light ">2. Select Design Parameters</h3>
                         <p class="fw-light  text-muted mb-5 mb-lg-0 textresponsive">
-                            Following Silhouette selection, the platform will direct the customer to a page where they can select the size (for physical garments) and the custom design preferences, such as trend, sub-trend, colors, season, and factors like age and gender for the design to be based on.
+                            Following Silhouette selection, the platform will direct the customer to a page where they can select the size (for physical garments) and the design characteristics, such as trend, sub-trend, colors, season, and factors like age and gender for the design to be based on.
                         </p>
                     </div>
                     <div class="col-sm-10 col-md-8 col-lg-6">
