--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                 <div class="row gx-5 align-items-center">
                     <div class="col-lg-12 order-lg-1 mb-5 mb-lg-0">
                         <div class="container-fluid px-5">
-                            <div class="row gx-5">
+                            <div class="row gx-5custom">
                                 <div class="col-md-6 mb-5 mb-md-0">
                                     <!-- Feature item-->
                                     <div class="text-center">
