--- a/index.html
+++ b/index.html
@@ -198,11 +198,11 @@
                             <div class="text"></div>
                           </div>
 
-                          <div class="mySlides fade">
+                          <!-- <div class="mySlides fade">
                             <div class="numbertext"></div>
                             <img class="img-fluid sliderimg" src="assets/product5.png">
                             <div class="text"></div>
-                          </div>
+                          </div> -->
  
                           <div class="mySlides fade">
                             <div class="numbertext"></div>
@@ -224,7 +224,6 @@
 
 
                           <div style="text-align:center">
-                            <span class="dot"></span> 
                             <span class="dot"></span> 
                             <span class="dot"></span> 
                             <span class="dot"></span> 
@@ -509,7 +508,7 @@
                         <div class="px-sm-0"><img class="img-fluid ModelCss" src="assets/Model.png" alt="a t-shirt with a hawaian print" /></div>
                 </div>
 
-                <div class="display-6 lh-1 mb-4 fw-light Tryusout"><a href="https://xariia.net/" target="_blank"><h2 class="font-alt margintop1rem">Try Out Our Alpha Release</h2></a></div>
+                <div class="display-6 lh-1 mb-4 fw-light Tryusout"><a href="https://app.xariia.com/" target="_blank"><h2 class="font-alt margintop1rem">Try Out Our Alpha Release</h2></a></div>
 
         </section>
 
