--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
         <footer class="fw-light  bg-black text-center py-5">
             <div class="container px-5">
                 <div class=" text-white-50 small">
-                    <div class="">&copy;2023 XARIIA Inc</div>
+                    <div class="">&copy;2023 XARIIA Inc.</div>
                     <a href="privacy-policy.html">Privacy Policy</a>
                     <!-- <span class="mx-1">&middot;</span>
                     <a href="#!">Terms</a> -->
