--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     <div class="col-lg-6">
                         <!-- Mashead text and app badges-->
                         <div class="mb-5 mb-lg-0 text-center text-lg-start">
-                            <h1 class="display-6 lh-2 mb-3 fw-light ">Unique Fashion Made Simple, Fast, And Creative
+                            <h1 class="display-6 lh-2 fw-light ">Unique Fashion Made Simple, Fast, And Creative
                             </h1>
                             <p class=" fw-light  mb-5 textresponsive">XARIIA revolutionizes the fashion industry by automating the time-consuming pattern print design process for clothing, generating high-quality, style-consistent, trend-driven, unique, and custom designs in seconds.
                             </p>
@@ -265,8 +265,8 @@
             <div class="container px-5">
                 <div class="row gx-5 justify-content-center">
                     <div class="col-xl-7">
-                        <div class="textblack mb-4">
-                            <h2 class="display-6 lh-1 mb-4 fw-light ">Mission & Vision</h2>
+                        <div class="textblack">
+                            <h2 class="display-6 lh-1 fw-light ">Mission & Vision</h2>
                             <p class="fw-light  textresponsive">
                                 XARIIA's vision is to simplify unique fashion, making it accessible and affordable to everyone around the world, providing each customer with a unique and custom design while keeping the process simple and user-friendly, reducing waste through on-demand production for its physical products, and promoting 96% more sustainable digital luxury.                        </div>
                     </div>
@@ -277,7 +277,7 @@
         <!-- App features section-->
         <section class="sectionfeatures">
             <div class="container px-5">
-                <h2 class="display-6 lh-1 mb-4 Textfeatures fw-light ">Features</h2>
+                <h2 class="display-6 lh-1 Textfeatures fw-light ">Features</h2>
 
                 <div class="row gx-5 align-items-center">
                     <div class="col-lg-12 order-lg-1 mb-5 mb-lg-0">
@@ -428,7 +428,7 @@
         <!-- Basic features section-->
          <section class="bg-light">
             <div class="container px-5">
-                <h2 class="display-6 lh-1 mb-4 fw-light">How ?</h2>
+                <h2 class="display-6 lh-1 fw-light">How ?</h2>
                 <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
                     <div class="col-12 col-lg-6">
                         <h3 class="display-8 lh-1 fw-light "> 1. Select A Silhouette</h3>
@@ -497,7 +497,7 @@
             <div class="container px-5">
                 <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
                     <div class="col-12 col-lg-6">
-                        <h2 class="display-6 lh-1 mb-4 fw-light">For Who ?</h2>
+                        <h2 class="display-6 lh-1 fw-light">For Who ?</h2>
                         <p class="fw-light  text-muted mb-5 mb-lg-0 textresponsive">
                             <span class="Textblue">Designers</span>: by providing monthly print-generation packages that allow customers to generate and download custom prints for their own use through a panel on our platform.<br><br>
                             <span class="Textblue">Businesses</span>: by integrating our AI (as an API) into the online platforms of other businesses and generating custom prints for their products.<br><br>
@@ -508,7 +508,7 @@
                         <div class="px-sm-0"><img class="img-fluid ModelCss" src="assets/Model.png" alt="a t-shirt with a hawaian print" /></div>
                 </div>
 
-                <div class="display-6 lh-1 mb-4 fw-light Tryusout"><a href="https://app.xariia.com/" target="_blank"><h2 class="font-alt margintop1rem">Try Out Our Alpha Release</h2></a></div>
+                <div class="display-6 lh-1 fw-light"><a href="https://app.xariia.com/" target="_blank"><h2 class="font-alt margintop1rem">Try Out Our Alpha Release</h2></a></div>
 
         </section>
 
