--- a/index.html
+++ b/index.html
@@ -268,7 +268,9 @@
                         <div class="textblack">
                             <h2 class="display-6 lh-1 fw-light ">Mission & Vision</h2>
                             <p class="fw-light  textresponsive">
-                                XARIIA's vision is to simplify unique fashion, making it accessible and affordable to everyone around the world, providing each customer with a unique and custom design while keeping the process simple and user-friendly, reducing waste through on-demand production for its physical products, and promoting 96% more sustainable digital luxury.                        </div>
+                                XARIIA's vision is to simplify unique fashion, making it accessible and affordable to everyone around the world, providing each customer with a unique and custom design while keeping the process simple and user-friendly, reducing waste through on-demand production for its physical products, and promoting 96% more sustainable digital luxury. 
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
