--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
                 </div>
             </div>
         </section>
-        <section class="bg-light">
+        <!-- <section class="bg-light">
             <div class="container px-5">
                 <div class="row gx-5 align-items-center justify-content-center justify-content-lg-between">
                
@@ -512,7 +512,7 @@
 
                 <div class="display-6 lh-1 fw-light"><a href="https://app.xariia.com/" target="_blank"><h2 class="font-alt margintop1rem">Try Out Our Alpha Release</h2></a></div>
 
-        </section>
+        </section> -->
 
 
 
